<resources>
    <!-- NOTE: SOME STRINGS ARE USED IN MULTIPLE XML PAGES -->
    <string name="app_name">Lunch Buddi</string>
    <string name="under_construction">PAGE UNDER CONSTRUCTION, SORRY</string>

    <!-- activity_login.xml STRINGS -->
    <string name="Login">Login</string>
    <string name="MAINLOGO">Logo</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <!-- Strings related to Login (not used yet)-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!-- END -->

    <!-- login_page_new_user.xml STRINGS -->
    <string name="Verification_Code">Verification Code</string>
    <!-- END -->

    <!-- registerpage1.xml STRINGS -->
    <string-array name="spinnerForMajors"><item>Major</item></string-array>
    <string-array name="spinnerForGradYear"><item>Graduation Year</item></string-array>
    <string name="Register_Account_Banner">Register Account</string>
    <string name="Full_Name">Full Name</string>
    <string name="Chosen_Major">Chosen Major</string>
    <string name="Graduation_Year">Expected Graduation Year</string>
    <string name="New_Password">New Password</string>
    <string name="Next_Page">Next Page</string>
    <!-- END -->

    <!-- registerpage2.xml STRINGS -->
    <string-array name="spinnerForMondayAvail"><item>Monday</item></string-array>
    <string-array name="spinnerForTuesdayAvail"><item>Tuesday</item></string-array>
    <string-array name="spinnerForWednesdayAvail"><item>Wednesday</item></string-array>
    <string-array name="spinnerForThursdayAvail"><item>Thursday</item></string-array>
    <string-array name="spinnerForFridayAvail"><item>Friday</item></string-array>
    <string-array name="spinnerForSaturdayAvail"><item>Saturday</item></string-array>
    <string-array name="spinnerForSundayAvail"><item>Sunday</item></string-array>
    <string name="Availability_Banner">Availability</string>
    <string name="Monday_Availability">Monday Availability</string>
    <string name="Tuesday_Availability">Tuesday Availability</string>
    <string name="Wednesday_Availability">Wednesday Availability</string>
    <string name="Thursday_Availability">Thursday Availability</string>
    <string name="Friday_Availability">Friday Availability</string>
    <string name="Saturday_Availability">Saturday Availability</string>
    <string name="Sunday_Availability">Sunday Availability</string>
    <!-- END -->

    <!-- registerpage3.xml STRINGS -->
    <string name="InterestsList">Interests</string>
    <string-array name="spinnerForFavPlacesToEat"><item>Favorite Places to Eat</item></string-array>
    <string-array name="spinnerForCurrentClubsTheyreIn"><item>Current Clubs Youre In</item></string-array>
    <string name="Favorite_Places_to_Eat">Favorite Places to Eat</string>
    <string name="I_Bring_My_Lunch">I Bring My Lunch</string>
    <string name="I_Dont_Bring_My_Lunch">I Dont Bring My Lunch</string>
    <string name="I_Do_Both">I Do Both</string>
    <string name="Clubs_Youre_In">Clubs Youre In</string>
    <string name="Finish">Finish</string>
    <!-- END -->

    <!-- activity_homepage.xml STRINGS -->
    <string name="Home_Banner">Home</string>
    <string name="scheduleButton">Schedule</string>
    <string name="findlunchButton">Find Lunch</string>
    <string name="mapButton">Map</string>
    <string name="inboxButton">Inbox</string>
    <string name="socialmediaButton">Social Media</string>
    <string name="settingsButton">Settings</string>
    <string name="logoutButton">Logout</string>
    <!-- END -->


    <!-- socialmediapage.xml STRINGS -->
    <string name="instagramButton">Instagram</string>
    <string name="facebookButton">Facebook</string>
    <string name="youtubeButton">YouTube</string>
    <string name="twitterButton">Twitter</string>
    <string name="pinterestButton">Pinterest</string>
    <string name="tumblrButton">Tumblr</string>
    <string name="backtoHomeButton">Back to home</string>
    <!-- END -->


    <!-- settingpage.xml STRINGS -->
    <string name="Edit_Profile">Edit Profile</string>
    <string name="deleteaccountButton">Delete Account</string>
    <string name="SettingsBanner">Settings</string>
    <string name="aboutusButton">About Us</string>
    <string name="Report_Abuse">Report Abuse</string>
    <string name="feedback">Feedback</string>
    <string name="helpButton">Help</string>
    <string name="sponsors">Sponsors</string>
    <string name="coupons">Coupons</string>
    <!-- END -->

    <!-- inboxpage.xml STRINGS -->
    <string name="CurrentInboxMessages">Messages</string>
    <string name="inboxBanner">Inbox</string>
    <string name="newMessageButton">New Message</string>
    <string name="title_activity_inbox">inbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createMessagePage">New Message</string>
    <!-- END -->

    <!-- newmessageinbox.xml STRINGS -->
    <string name="Mail_Recipient">Message Recipient</string>
    <string name="sendMessageButton">Send</string>
    <string name="backtoInboxPage">Cancel</string>
    <!-- END -->

    <!-- schedulepage.xml STRINGS -->
    <string name="schedule_banner">Schedule Banner</string>
    <!-- END -->

    <!-- activity_find_lunch.xml STRINGS -->
    <string name="findlunch_banner">Find Lunch Banner</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- END -->

    <!-- activity_edit_profile.xml STRINGS -->
    <string name="backtoSettingspageButton">Back to Settings Page</string>
    <string name="EditProfilePageBanner">Edit Profile</string>
    <string name="Edit_Name">Edit Name</string>
    <string name="editemailButton">Edit Email</string>
    <string name="editinterests">Edit Interests</string>
    <string name="editmajorButton">Edit Major</string>
    <string name="editgradyearbutton">Edit Graduation Year</string>
    <string name="editavailabilityButton">Edit Availability</string>
    <string name="editfavplacestoeatbutton">Edit Favorite Places to Eat</string>
    <string name="editcurrentclubsbutton">Edit Current Clubs You\'re In</string>
    <!-- END -->

    <!-- aboutuspage.xml STRINGS -->
    <string name="AboutUsBanner">About Us</string>
    <!-- END -->

    <!-- sponsorspage.xml STRINGS -->
    <string name="SponsorsBanner">Sponsors</string>
    <!-- END -->

    <!-- couponspage.xml STRINGS -->
    <string name="CouponsBanner">Coupons</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_find_lunch">FindLunch</string>
    <string name="title_activity_coupons">Coupons</string>
    <!-- END -->

</resources>
