<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerHorizontal="true">
    <!-- Author: Emily Black -->
    <!-- Edited: 1/11/16 -->

    <Spinner
        android:id="@+id/favoritePlacesToEat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColorHint="#000000"
        android:hint="@string/Favorite_Places_to_Eat"
        />

    <CheckBox
        android:id="@+id/ibringmylunchCHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_weight="1"
        android:textColor="#000000"
        android:text="@string/I_Bring_My_Lunch" />

    <CheckBox
        android:id="@+id/idontbringmylunchCHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_weight="1"
        android:textColor="#000000"
        android:text="@string/I_Dont_Bring_My_Lunch" />

    <CheckBox
        android:id="@+id/idobothCHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_weight="1"
        android:textColor="#000000"
        android:text="@string/I_Do_Both" />

    <Spinner
        android:id="@+id/spinnerForCurrentClubsTheyreIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColorHint="#000000"
        android:hint="@string/Clubs_Youre_In"
        />

    <!-- Maybe this could be a list of interests such as sports/etc? -->
    <Spinner
        android:id="@+id/spinnerForInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColorHint="#000000"
        android:hint="@string/InterestsList"
        />

    <Button
        android:id="@+id/buttonToNewLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="MethodToGoToNewLoginPage"
        android:text="@string/Finish"
        />
</LinearLayout>
