<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerHorizontal="true">
    <!-- Author: Emily Black -->
    <!-- Edited: 1/11/16 -->

            <EditText
                android:id="@+id/newFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/Full_Name"
                android:textColorHint="#000000"
                android:layout_weight="1"
                android:inputType="textPersonName"
               />

            <EditText
                android:id="@+id/newOuEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_weight="1"
                android:hint="@string/Email"
                android:textColorHint="#000000"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/spinnerForMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#000000"
                android:hint="@string/Chosen_Major"
                />

            <Spinner
                android:id="@+id/spinnerForGradYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#000000"
                android:hint="@string/Graduation_Year"
                />

            <EditText
                android:id="@+id/newPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_weight="1"
                android:hint="@string/New_Password"
                android:textColorHint="#000000"
                android:inputType="textPassword" />

            <Button
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Next_Page"
                android:id="@+id/buttonToRegisterPage2"
                android:layout_weight="1"
                android:onClick="MethodToGoToRegisterPage2" />
</LinearLayout>
