<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerHorizontal="true">

    <!-- Author: Emily Black -->
    <!-- Edited: 1/11/16 -->
    <!-- Login progress -->
    <!-- Refer to strings.xml for text references -->
    <!-- ID values go in R.java -->

        <ImageView
            android:layout_weight="4"
            android:id="@+id/loginlogo"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/MAINLOGO"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/transparentlogo"/>
    <!-- We're not quite sure who owns this ^ image. Check with Adrienne -->

        <EditText
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ouEmailInput"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:textColorHint="#000000"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_weight="2"
            android:textColorHint="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInput"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_weight="2"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/loginButton"
            android:layout_gravity="center_horizontal"
            android:onClick="loginToHomePage" />

        <Button
            android:layout_weight="2"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/registerButton"
            android:layout_gravity="center_horizontal"
            android:onClick="methodToGoToRegisterPage1" />
</LinearLayout>