<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:id="@+id/inboxPage"
    android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/inboxBanner"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:id="@+id/inboxlogo"
        android:src="@drawable/inboxbanner"
        android:layout_gravity="top"
        android:focusableInTouchMode="false"/>

            <!--   This list holds all inbox messages for a certain user. THEY
              ARE CLICKABLE -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listOfInboxMessages"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:id="@+id/inboxPage1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/backtoHomeButton"
            android:layout_marginBottom="10dp"
            android:id="@+id/backtoHomeButton"
            android:layout_gravity="center_horizontal"
            android:onClick="methodToGoToHomePage" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/newMessageButton"
            android:layout_marginBottom="10dp"
            android:id="@+id/newMessageButton"
            android:layout_gravity="center_horizontal"
            android:onClick="methodToGoToNewMessagePage" />
</LinearLayout>
</LinearLayout>